feat: set up basic flash floods portal AB#17728

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -2,7 +2,7 @@
   <app-dialogue-turn [isWarn]="isWarn">
     <p
       [innerHTML]="
-        'chat-component.' + disasterTypeName + '.warn-label.message'
+        'chat-component.common.warn-label.message'
           | translate
             : {
                 lastModelRunDate: lastModelRunDate,
