fix: make portal work in overview mode AB#18198

--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="eventState?.event?.thresholdReached">
+<ng-container *ngIf="eventState?.thresholdReached">
   <ion-row
     class="component-title"
     color="ibf-secondary"
