feat: update today's date in header AB#18133

--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
@@ -1,8 +1,5 @@
 <ion-row>
-  <div
-    *ngFor="let disasterType of disasterTypes"
-    class="disaster-type-button-container"
-  >
+  <div *ngFor="let disasterType of disasterTypes">
     <ion-icon
       (click)="switchDisasterType(disasterType)"
       class="disaster-type-button"
