feat: go back to overview by btn and when coming from other disaster-type AB#18318 AB#18322

--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
@@ -1,13 +1,21 @@
 <div *ngIf="multipleActiveEvents()">
-  <div *ngIf="event.eventName === selectedEventName">
-    <p>
-      <strong>{{
-        'chat-component.typhoon.event-switcher.current-event-message'
-          | translate
-      }}</strong>
-    </p>
-  </div>
   <div class="containerDiv">
+    <ion-button
+      *ngIf="event.eventName === selectedEventName"
+      class="ibf event-switch-button"
+      [class.triggered]="event.thresholdReached"
+      [class.selected]="event.eventName === selectedEventName"
+      shape="block"
+      slot="start"
+      [color]="getColor(event)"
+      size="small"
+      (click)="switchEvent(event)"
+      [innerHtml]="
+      'chat-component.' + disasterTypeName + '.event-switcher.current-event-message'
+        | translate
+      "
+    >
+    </ion-button>
     <ion-button
       *ngIf="event.eventName !== selectedEventName"
       class="ibf event-switch-button"
@@ -18,11 +26,14 @@
       [color]="getColor(event)"
       size="small"
       (click)="switchEvent(event)"
+      [innerHtml]="
+      'chat-component.' + disasterTypeName + '.event-switcher.switch-event-button'
+        | translate
+          : {
+              eventName: event.eventName
+            }
+      "
     >
-      {{
-        'chat-component.typhoon.event-switcher.switch-event-button-prefix'
-          | translate
-      }}{{ event.eventName }}
     </ion-button>
   </div>
 </div>
