feat: add duration in timeline + chat AB#18325

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -67,7 +67,8 @@
                     timeUnit: event.timeUnit,
                     disasterTypeLabel: disasterTypeLabel,
                     firstLeadTimeDate: event.firstLeadTimeDate,
-                    eventName: event.eventName || disasterTypeLabel
+                    eventName: event.eventName || disasterTypeLabel,
+                    duration: event.duration
                   }
           "
         ></span>
