--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -29,6 +29,7 @@
       [active]="!timeStepButton.disabled"
       [todayButton]="false"
       [eventName]="timeStepButton.eventName"
+      [duration]="timeStepButton.duration"
     ></app-date-button>
   </ion-button>
 </ion-item>
