feat: make chat+timeline active on hover in map AB#18324

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -50,7 +50,7 @@
       *ngFor="let event of eventState?.events"
       [isTriggered]="event.thresholdReached"
       [isNotTriggered]="!event.thresholdReached"
-      [isSelected]="event.eventName === eventState?.event?.eventName"
+      [isSelected]="eventBubbleIsSelected(event.eventName)"
       isConnected="true"
     >
       <p *ngIf="event.activeTrigger && event.thresholdReached">
