--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.scss
@@ -7,7 +7,7 @@ ion-item {
 ion-button {
   height: 100% !important;
   min-width: 90px;
-  text-transform: uppercase;
+  text-align: left;
   --box-shadow: none;
 
   &.active {
