fix: wait for disasterType AB#18197

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -35,8 +35,8 @@
     [type]="'no-event'"
     [event]="null"
     [selectedEvent]="eventState?.event?.eventName"
-    [disasterTypeLabel]="disasterType.label"
-    [disasterTypeName]="disasterType.disasterType"
+    [disasterTypeLabel]="disasterType?.label"
+    [disasterTypeName]="disasterType?.disasterType"
     [typhoonLandfallText]="showTyphoonLandfallText(null)"
     [clearOutMessage]="clearOutMessage"
     [countryCodeISO3]="country?.countryCodeISO3"
@@ -62,8 +62,8 @@
         [type]="'active'"
         [event]="event"
         [selectedEvent]="eventState?.event?.eventName"
-        [disasterTypeLabel]="disasterType.label"
-        [disasterTypeName]="disasterType.disasterType"
+        [disasterTypeLabel]="disasterType?.label"
+        [disasterTypeName]="disasterType?.disasterType"
         [typhoonLandfallText]="showTyphoonLandfallText(event)"
         [clearOutMessage]="clearOutMessage"
         [countryCodeISO3]="country?.countryCodeISO3"
@@ -82,8 +82,8 @@
         [type]="'stopped'"
         [event]="event"
         [selectedEvent]="eventState?.event?.eventName"
-        [disasterTypeLabel]="disasterType.label"
-        [disasterTypeName]="disasterType.disasterType"
+        [disasterTypeLabel]="disasterType?.label"
+        [disasterTypeName]="disasterType?.disasterType"
         [typhoonLandfallText]="showTyphoonLandfallText(event)"
         [clearOutMessage]="clearOutMessage"
         [countryCodeISO3]="country?.countryCodeISO3"
@@ -105,8 +105,8 @@
     [type]="'old'"
     [event]="eventState?.event"
     [selectedEvent]="eventState?.event?.eventName"
-    [disasterTypeLabel]="disasterType.label"
-    [disasterTypeName]="disasterType.disasterType"
+    [disasterTypeLabel]="disasterType?.label"
+    [disasterTypeName]="disasterType?.disasterType"
     [typhoonLandfallText]="showTyphoonLandfallText(eventState?.event)"
     [clearOutMessage]="clearOutMessage"
     [countryCodeISO3]="country?.countryCodeISO3"
